--- a/css/unify.css
+++ b/css/unify.css
@@ -189,20 +189,20 @@ a:hover {
     font-size: 40px;
 }
 
-#big {
+#func {
     width: 600px;
     text-align: center;
     font-size: 60px;
     line-height: 1;
 }
 
-#big b {
+#func b {
     display: block;
     font-size: 250px;
     line-height: 250px;
 }
 
-#big .device {
+#func .device {
     font-size: 90px;
     line-height: 150px;
 }
@@ -212,11 +212,11 @@ a:hover {
     text-align: center;
 }
 
-#ing {
+#specification {
     width: 500px;
 }
 
-#ing b {
+#specification b {
     display: inline-block;
     -webkit-transition: 0.5s;
     -moz-transition:    0.5s;
@@ -225,7 +225,7 @@ a:hover {
     transition:         0.5s;
 }
 
-#ing.active .positioning {
+#specification.active .positioning {
     -webkit-transform: translateY(-10px);
     -moz-transform:    translateY(-10px);
     -ms-transform:     translateY(-10px);
@@ -239,7 +239,7 @@ a:hover {
     transition-delay:         1.5s;
 }
 
-#ing.active .rotating {
+#specification.active .rotating {
     -webkit-transform: rotate(-10deg);
     -moz-transform:    rotate(-10deg);
     -ms-transform:     rotate(-10deg);
@@ -253,7 +253,7 @@ a:hover {
     transition-delay:         1.75s;
 }
 
-#ing.active .scaling {
+#specification.active .scaling {
     -webkit-transform: scale(0.7);
     -moz-transform:    scale(0.7);
     -ms-transform:     scale(0.7);
@@ -268,7 +268,7 @@ a:hover {
 
 }
 
-#source {
+#architecture {
 	width: 1200px;
 	height: 800px;
 	padding-bottom: 300px;
@@ -277,12 +277,12 @@ a:hover {
 	background-image: url(../archi.gif)
 }
 
-#source q {
+#architecture q {
     font-size: 60px;
 }
 
-#one-more-thing span,
-#one-more-thing b {
+#oauth-json span,
+#oauth-json b {
     display: inline-block;
     -webkit-transform: translateZ(40px);
     -moz-transform:    translateZ(40px);
@@ -297,7 +297,7 @@ a:hover {
     transition:         0.5s;
 }
 
-#one-more-thing .wehave {
+#oauth-json .wehave {
     -webkit-transform: translateZ(-40px);
     -moz-transform:    translateZ(-40px);
     -ms-transform:     translateZ(-40px);
@@ -305,7 +305,7 @@ a:hover {
     transform:         translateZ(-40px);
 }
 
-#one-more-thing .used {
+#oauth-json .used {
     -webkit-transform: translateZ(20px);
     -moz-transform:    translateZ(20px);
     -ms-transform:     translateZ(20px);
@@ -313,7 +313,7 @@ a:hover {
     transform:         translateZ(20px);
 }
 
-#one-more-thing .oauth {
+#oauth-json .oauth {
     -webkit-transform: translateZ(-40px);
     -moz-transform:    translateZ(-40px);
     -ms-transform:     translateZ(-40px);
@@ -321,7 +321,7 @@ a:hover {
     transform:         translateZ(-40px);
 }
 
-#one-more-thing .for {
+#oauth-json .for {
     -webkit-transform: translateZ(60px);
     -moz-transform:    translateZ(60px);
     -ms-transform:     translateZ(60px);
@@ -329,7 +329,7 @@ a:hover {
     transform:         translateZ(60px);
 }
 
-#one-more-thing .authentication {
+#oauth-json .authentication {
     -webkit-transform: translateZ(-10px);
     -moz-transform:    translateZ(-10px);
     -ms-transform:     translateZ(-10px);
@@ -337,7 +337,7 @@ a:hover {
     transform:         translateZ(-10px);
 }
 
-#one-more-thing .json {
+#oauth-json .json {
     font-size: 32px;
 
     -webkit-transform: translateZ(-10px);
@@ -347,8 +347,8 @@ a:hover {
     transform:         translateZ(-10px);
 }
 
-#one-more-thing.active span,
-#one-more-thing.active b {
+#oauth-json.active span,
+#oauth-json.active b {
     -webkit-transform: translateZ(0px);
     -moz-transform:    translateZ(0px);
     -ms-transform:     translateZ(0px);
